<resources>
    <string name="app_name">KYT</string>
    <string name="camera_grant">Grant camera permission!</string>
    <string name="press_again_logout">Press back again.</string>
    <string name="crop">Crop</string>
    <string name="save">Save</string>
    <string name="export">Export</string>
    <string name="delete">Delete</string>
    <string name="enhance">Enhance</string>
    <string name="black">Black_White</string>
    <string name="reset">Reset</string>
    <string name="scan">Scanning</string>

    <string name="next">Next</string>
    <string name="done">Done</string>

    <string name="lbl_string_apply">Apply</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_left">Left</string>
    <string name="lbl_right">Right</string>
    <string name="lbl_crop">Crop</string>
    <string name="lbl_camera_unavailable">Camera is not available (in use or does not exist).\nPlease close applications, that may use camera.
    </string>
    <string name="lbl_zoom_ratio_value">Zoom: %1.2fx</string>
    <string name="lbl_open_photo_preview">Open preview photo after shot</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_hdr">HDR</string>
    <string name="lbl_close">Close</string>
    <string name="lbl_focus_mode">Focus mode</string>
    <string name="lbl_ratio">Ratio</string>
    <string name="lbl_quality">Quality</string>
    <string name="lbl_take_another">Take another</string>
    <string name="lbl_photo_crop">Photo crop</string>
    <string name="lbl_photo_preview">lbl_photo_preview</string>
    <string name="original">Original</string>
    <string name="magic_color">Magic Color</string>
    <string name="gray_mode">Gray Mode</string>
    <string name="b_amp_w"><![CDATA[B&W]]></string>
    <string name="single_mode">Single Mode</string>
    <string name="batch_mode">Batch Mode</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="import_from_gallery">Import from gallery</string>
    <string name="rate_us">Rate us</string>
    <string name="enter_name">Enter name..</string>
    <string name="generate_pdf">Generate PDF</string>
    <string name="share_pdf">Share PDF</string>
    <string name="share_images">Share images</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
</resources>
